duniverse/menhirLib.20200211/test/static/bad/on-error-reduce-nonexistent.mly
%token A B
%start<unit> main
%on_error_reduce foo

%%

main:
  A B {}
