duniverse/menhirLib.20200211/test/static/bad/on-error-reduce-nonexistent.exp
File "on-error-reduce-nonexistent.mly", line 3, characters 17-20:
Error: foo is undefined.
